# steel-engine

./: .gitignore  CMakeLists.txt  README.md
include/: .gitignore
libs/: .gitignore
src/: CMakeLists.txt  main.cpp  steel.hpp
src/core/: application.cpp  application.hpp  component.cpp  component.hpp  component_container.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  scene_manager.cpp  scene_manager.hpp  screen.hpp  shader.cpp  shader.hpp  steel_imgui.cpp  steel_imgui.hpp
src/core/components/: transform.cpp  transform.hpp
src/gameengine/: arrows.cpp  arrows.hpp  camera.cpp  camera.hpp  debug.cpp  debug.hpp  functions.cpp  functions.hpp  lighting.cpp  lighting.hpp  primitives.cpp  primitives.hpp  ui.cpp  ui.hpp
src/resources/: default.frag  default.vert  unlit.frag  unlit.vert
